-- 우리가족 체력키움 초기 스키마.
-- PostgreSQL 과 H2(MODE=PostgreSQL) 양쪽에서 그대로 실행되도록 DB 전용 문법(gen_random_uuid, now(), 부분 인덱스, jsonb)을 쓰지 않는다.
-- ID·시각은 애플리케이션이 채운다. JSON 은 text 컬럼에 원문 그대로 보관한다.

-- ===== identity =====
create table users (
    id                uuid         not null,
    provider          varchar(20)  not null,
    provider_user_id  varchar(191) not null,
    email             varchar(255),
    status            varchar(20)  not null,
    created_at        timestamp with time zone not null,
    updated_at        timestamp with time zone not null,
    constraint pk_users primary key (id),
    constraint uq_users_provider unique (provider, provider_user_id),
    constraint ck_users_status check (status in ('ACTIVE', 'INACTIVE'))
);

create table families (
    id          uuid        not null,
    name        varchar(60) not null,
    region_code varchar(20),
    created_at  timestamp with time zone not null,
    updated_at  timestamp with time zone not null,
    constraint pk_families primary key (id)
);

create table profiles (
    id                    uuid         not null,
    family_id             uuid         not null,
    user_id               uuid,
    display_name          varchar(30)  not null,
    birth_date            date         not null,
    sex                   varchar(1)   not null,
    role                  varchar(10)  not null,
    is_owner              boolean      not null,
    height_cm             numeric(4, 1),
    weight_kg             numeric(4, 1),
    support_mode          varchar(20),
    claim_code            varchar(8),
    claim_code_expires_at timestamp with time zone,
    claim_code_claimed_at timestamp with time zone,
    consent_personal_at   timestamp with time zone,
    consent_health_at     timestamp with time zone,
    consent_by_user_id    uuid,
    consent_revoked_at    timestamp with time zone,
    created_at            timestamp with time zone not null,
    updated_at            timestamp with time zone not null,
    constraint pk_profiles primary key (id),
    constraint fk_profiles_family foreign key (family_id) references families (id),
    constraint fk_profiles_user foreign key (user_id) references users (id),
    constraint fk_profiles_consent_by foreign key (consent_by_user_id) references users (id),
    constraint uq_profiles_family_user unique (family_id, user_id),
    constraint uq_profiles_claim_code unique (claim_code),
    constraint ck_profiles_sex check (sex in ('M', 'F')),
    constraint ck_profiles_role check (role in ('PARENT', 'CHILD')),
    constraint ck_profiles_support_mode check (support_mode is null or support_mode in ('CHEER_ONLY', 'WEEKEND', 'FULL')),
    constraint ck_profiles_claim_code_pair check ((claim_code is null) = (claim_code_expires_at is null))
);
create index ix_profiles_family on profiles (family_id);
create index ix_profiles_user on profiles (user_id);

create table cheers (
    id              uuid not null,
    family_id       uuid not null,
    from_profile_id uuid not null,
    to_profile_id   uuid not null,
    mission_id      uuid,
    emoji           varchar(20),
    message         varchar(200),
    created_at      timestamp with time zone not null,
    constraint pk_cheers primary key (id),
    constraint fk_cheers_family foreign key (family_id) references families (id),
    constraint fk_cheers_from foreign key (from_profile_id) references profiles (id),
    constraint fk_cheers_to foreign key (to_profile_id) references profiles (id),
    constraint ck_cheers_not_self check (from_profile_id <> to_profile_id),
    constraint ck_cheers_content check (emoji is not null or message is not null)
);
create index ix_cheers_family_created on cheers (family_id, created_at);
create index ix_cheers_to_created on cheers (from_profile_id, to_profile_id, created_at);

-- ===== fitness =====
create table fitness_norms (
    id          bigint generated by default as identity,
    item_code   varchar(3)    not null,
    sex         varchar(1)    not null,
    age_from    smallint      not null,
    age_to      smallint      not null,
    percentile  smallint      not null,
    norm_value  numeric(8, 3) not null,
    source_year smallint      not null,
    constraint pk_fitness_norms primary key (id),
    constraint uq_fitness_norm unique (item_code, sex, age_from, age_to, percentile, source_year),
    constraint ck_fitness_norms_sex check (sex in ('M', 'F'))
);

create table fitness_tests (
    id          uuid        not null,
    profile_id  uuid        not null,
    tested_on   date        not null,
    source      varchar(20) not null,
    age_at_test smallint    not null,
    height_cm   numeric(4, 1),
    weight_kg   numeric(4, 1),
    created_at  timestamp with time zone not null,
    constraint pk_fitness_tests primary key (id),
    constraint fk_fitness_tests_profile foreign key (profile_id) references profiles (id),
    constraint uq_fitness_test_date unique (profile_id, tested_on),
    constraint ck_fitness_tests_source check (source in ('SELF_INPUT', 'CENTER_SHEET'))
);

create table fitness_test_items (
    fitness_test_id uuid          not null,
    item_code       varchar(3)    not null,
    raw_value       numeric(8, 3) not null,
    percentile      smallint,
    grade           varchar(10),
    band            varchar(10),
    constraint pk_fitness_test_items primary key (fitness_test_id, item_code),
    constraint fk_fitness_test_items_test foreign key (fitness_test_id) references fitness_tests (id),
    constraint ck_fitness_test_items_percentile check (percentile is null or (percentile between 1 and 99)),
    constraint ck_fitness_test_items_band check (band is null or band in ('strength', 'steady', 'growth'))
);

create table predictions (
    id              uuid        not null,
    profile_id      uuid        not null,
    fitness_test_id uuid,
    item_code       varchar(3)  not null,
    horizon_years   smallint    not null,
    model_version   varchar(40) not null,
    basis           varchar(60) not null,
    notice          varchar(300) not null,
    created_at      timestamp with time zone not null,
    constraint pk_predictions primary key (id),
    constraint fk_predictions_profile foreign key (profile_id) references profiles (id),
    constraint fk_predictions_test foreign key (fitness_test_id) references fitness_tests (id)
);

create table prediction_points (
    prediction_id  uuid        not null,
    scenario       varchar(20) not null,
    item_code      varchar(3)  not null,
    years_from_now smallint    not null,
    p10            numeric(8, 3),
    p50            numeric(8, 3),
    p90            numeric(8, 3),
    constraint pk_prediction_points primary key (prediction_id, scenario, item_code, years_from_now),
    constraint fk_prediction_points_prediction foreign key (prediction_id) references predictions (id),
    constraint ck_prediction_points_scenario check (scenario in ('MAINTAIN', 'IMPROVE'))
);

-- ===== activity =====
create table activity_daily (
    id             uuid        not null,
    profile_id     uuid        not null,
    activity_date  date        not null,
    source         varchar(10) not null,
    steps          integer     not null,
    active_minutes smallint    not null,
    recorded_at    timestamp with time zone not null,
    constraint pk_activity_daily primary key (id),
    constraint fk_activity_daily_profile foreign key (profile_id) references profiles (id),
    constraint uq_activity_daily unique (profile_id, activity_date, source),
    constraint ck_activity_daily_source check (source in ('MANUAL', 'TIMER', 'VIDEO')),
    constraint ck_activity_daily_nonneg check (steps >= 0 and active_minutes >= 0)
);

-- ===== coaching =====
create table exercise_videos (
    video_id     varchar(32)  not null,
    title        varchar(300) not null,
    channel_name varchar(120) not null,
    channel_type varchar(20)  not null,
    duration_sec integer,
    age_from     smallint,
    age_to       smallint,
    factors      varchar(120),
    intensity    varchar(10),
    space        varchar(20),
    noise        varchar(10),
    equipment    varchar(60),
    labeled_by   varchar(20)  not null,
    label_model  varchar(40),
    collected_at timestamp with time zone not null,
    constraint pk_exercise_videos primary key (video_id)
);

create table video_interactions (
    id              uuid        not null,
    profile_id      uuid        not null,
    video_id        varchar(32) not null,
    favorited       boolean     not null,
    favorited_at    timestamp with time zone,
    max_progress    numeric(4, 3) not null,
    watched_sec     integer     not null,
    credited_at     timestamp with time zone,
    last_watched_at timestamp with time zone,
    updated_at      timestamp with time zone not null,
    constraint pk_video_interactions primary key (id),
    constraint fk_video_interactions_profile foreign key (profile_id) references profiles (id),
    constraint fk_video_interactions_video foreign key (video_id) references exercise_videos (video_id),
    constraint uq_video_interaction unique (profile_id, video_id),
    constraint ck_video_interactions_progress check (max_progress between 0 and 1)
);

create table coach_runs (
    id              uuid        not null,
    family_id       uuid        not null,
    week_start      date        not null,
    trigger_type    varchar(10) not null,
    status          varchar(20) not null,
    summary         text,
    steps_json      text,
    proposal_json   text,
    ai_run_id       varchar(40),
    model_name      varchar(40),
    days_per_week   smallint    not null,
    minutes_per_session smallint not null,
    requested_by_profile_id uuid,
    approved_by     uuid,
    approved_at     timestamp with time zone,
    rejected_reason varchar(300),
    rejected_at     timestamp with time zone,
    failure_reason  varchar(300),
    created_at      timestamp with time zone not null,
    updated_at      timestamp with time zone not null,
    constraint pk_coach_runs primary key (id),
    constraint fk_coach_runs_family foreign key (family_id) references families (id),
    constraint fk_coach_runs_approved_by foreign key (approved_by) references profiles (id),
    constraint ck_coach_runs_trigger check (trigger_type in ('SCHEDULE', 'MANUAL')),
    constraint ck_coach_runs_status check (status in ('RUNNING', 'AWAITING_APPROVAL', 'APPROVED', 'REJECTED', 'FAILED')),
    constraint ck_coach_runs_approval_pair check ((approved_by is null) = (approved_at is null)),
    constraint ck_coach_runs_approved_state check (status <> 'APPROVED' or approved_at is not null)
);
create index ix_coach_runs_family_week on coach_runs (family_id, week_start);

create table coach_run_proposal_items (
    coach_run_id      uuid         not null,
    position          smallint     not null,
    title             varchar(120) not null,
    description       varchar(400),
    rationale         varchar(400),
    target_metric     varchar(20)  not null,
    target_value      integer      not null,
    video_id          varchar(32),
    video_start_sec   integer,
    starts_on         date         not null,
    ends_on           date         not null,
    copy_child        varchar(400),
    copy_parent       varchar(400),
    participants_json text         not null,
    citations_json    text         not null,
    constraint pk_coach_run_proposal_items primary key (coach_run_id, position),
    constraint fk_coach_run_proposal_items_run foreign key (coach_run_id) references coach_runs (id),
    constraint fk_coach_run_proposal_items_video foreign key (video_id) references exercise_videos (video_id),
    constraint ck_coach_run_proposal_items_metric check (target_metric in ('VIDEO_DONE', 'TIMER_MINUTES', 'STEPS'))
);

create table missions (
    id              uuid         not null,
    family_id       uuid         not null,
    coach_run_id    uuid,
    title           varchar(120) not null,
    description     varchar(400),
    origin          varchar(10)  not null,
    target_metric   varchar(20)  not null,
    target_value    integer      not null,
    video_id        varchar(32),
    video_start_sec integer,
    rationale       varchar(400),
    starts_on       date         not null,
    ends_on         date         not null,
    created_by      uuid,
    created_at      timestamp with time zone not null,
    constraint pk_missions primary key (id),
    constraint fk_missions_family foreign key (family_id) references families (id),
    constraint fk_missions_coach_run foreign key (coach_run_id) references coach_runs (id),
    constraint fk_missions_video foreign key (video_id) references exercise_videos (video_id),
    constraint fk_missions_created_by foreign key (created_by) references profiles (id),
    constraint ck_missions_origin check (origin in ('COACH', 'MANUAL')),
    constraint ck_missions_metric check (target_metric in ('VIDEO_DONE', 'TIMER_MINUTES', 'STEPS')),
    constraint ck_missions_origin_run check ((origin = 'COACH') = (coach_run_id is not null)),
    constraint ck_missions_period check (ends_on >= starts_on),
    constraint ck_missions_target check (target_value > 0)
);
create index ix_missions_family on missions (family_id, starts_on);

create table mission_participants (
    mission_id              uuid          not null,
    profile_id              uuid          not null,
    status                  varchar(20)   not null,
    progress                numeric(4, 3) not null,
    verified_by             varchar(20),
    verified_at             timestamp with time zone,
    confirmed_by_profile_id uuid,
    updated_at              timestamp with time zone not null,
    constraint pk_mission_participants primary key (mission_id, profile_id),
    constraint fk_mission_participants_mission foreign key (mission_id) references missions (id),
    constraint fk_mission_participants_profile foreign key (profile_id) references profiles (id),
    constraint fk_mission_participants_confirmed_by foreign key (confirmed_by_profile_id) references profiles (id),
    constraint ck_mission_participants_status check (status in ('PENDING', 'COMPLETED')),
    constraint ck_mission_participants_progress check (progress between 0 and 1),
    constraint ck_mission_participants_verified_by check (verified_by is null or verified_by in ('VIDEO_PROGRESS', 'TIMER', 'SELF_REPORT'))
);
create index ix_mission_participants_profile on mission_participants (profile_id);

create table coach_messages (
    id              uuid        not null,
    conversation_id uuid        not null,
    profile_id      uuid        not null,
    role            varchar(10) not null,
    content         text        not null,
    refused         boolean     not null,
    refusal_reason  varchar(40),
    created_at      timestamp with time zone not null,
    constraint pk_coach_messages primary key (id),
    constraint fk_coach_messages_profile foreign key (profile_id) references profiles (id),
    constraint ck_coach_messages_role check (role in ('USER', 'ASSISTANT'))
);
create index ix_coach_messages_conversation on coach_messages (conversation_id, created_at);

create table coach_message_citations (
    coach_message_id uuid         not null,
    position         smallint     not null,
    chunk_id         varchar(200),
    source_label     varchar(200) not null,
    excerpt          varchar(500),
    url              varchar(500),
    constraint pk_coach_message_citations primary key (coach_message_id, position),
    constraint fk_coach_message_citations_message foreign key (coach_message_id) references coach_messages (id)
);
